adapting code to SRI

--- a/ITAN_Strain_RNN_Classification.ipynb
+++ b/ITAN_Strain_RNN_Classification.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch Version:  1.0.1.post2\n",
+      "PyTorch Version:  1.1.0\n",
       "Setup complete!\n"
      ]
     }
@@ -30,6 +30,7 @@
     "import argparse\n",
     "import os\n",
     "from pprint import pprint, pformat\n",
+    "from pathlib import Path\n",
     "\n",
     "# Machine Learning\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -38,10 +39,10 @@
     "from sklearn.metrics import *\n",
     "\n",
     "# Basis Expansion (external package)\n",
-    "from basis_expansions import (Binner, Polynomial, \n",
-    "                              LinearSpline, CubicSpline,\n",
-    "                              NaturalCubicSpline)\n",
-    "from dftransformers import ColumnSelector, FeatureUnion, Intercept, MapFeature\n",
+    "# from basis_expansions import (Binner, Polynomial, \n",
+    "#                               LinearSpline, CubicSpline,\n",
+    "#                               NaturalCubicSpline)\n",
+    "# from dftransformers import ColumnSelector, FeatureUnion, Intercept, MapFeature\n",
     "\n",
     "# Deep Learning\n",
     "import torch\n",
@@ -74,72 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parameters:\n",
-      "{'all_locations': ['OR', 'WARD', 'ICU', 'TCU', 'PAR'],\n",
-      " 'associated_time_max': 96,\n",
-      " 'association_history': 0,\n",
-      " 'batch_size': 10,\n",
-      " 'cohort_features': ['ADM_LAPS2', 'ADM_COPS2', 'SEX', 'AGE'],\n",
-      " 'cohort_file': 'itan_cohort_v.h5',\n",
-      " 'cross_validation_ratios': {'test': 0.1, 'train': 0.8, 'val': 0.1},\n",
-      " 'data_dir': 'Data',\n",
-      " 'dropout_prob': 0.0,\n",
-      " 'hourly_embedding_fill_value': 0,\n",
-      " 'hourly_features': ['LAPS2',\n",
-      "                     'IMAR_IM_GROUP',\n",
-      "                     'IMAR_INH_GROUP',\n",
-      "                     'IMAR_IVD_GROUP',\n",
-      "                     'IMAR_IVR_GROUP',\n",
-      "                     'IMAR_MSC_GROUP',\n",
-      "                     'IMAR_OR_GROUP',\n",
-      "                     'OT_A_GROUP',\n",
-      "                     'OT_B_GROUP',\n",
-      "                     'OT_D_GROUP',\n",
-      "                     'OT_I_GROUP',\n",
-      "                     'OT_L_GROUP',\n",
-      "                     'OT_N_GROUP'],\n",
-      " 'included_features': ['static', 'hourly', 'strain'],\n",
-      " 'label': 'LOS',\n",
-      " 'learning_rate': 0.01,\n",
-      " 'max_associated_patients': 200,\n",
-      " 'max_occupancy': 150,\n",
-      " 'model_name': 'itan_strain_classification_net',\n",
-      " 'normalize_cohort': True,\n",
-      " 'normalize_hourly': True,\n",
-      " 'num_epochs': 100,\n",
-      " 'num_hourly_output_features': 32,\n",
-      " 'num_layers': 5,\n",
-      " 'numpy_random_seed': 7532941,\n",
-      " 'output_type': 'classification',\n",
-      " 'pad_length': 96,\n",
-      " 'pad_value': 0,\n",
-      " 'patient_hourly_hidden_size': 32,\n",
-      " 'predict_after_hours': 0,\n",
-      " 'predict_remaining_LoS': True,\n",
-      " 'project_dir': '..',\n",
-      " 'sample_dir': 'Data/itan_hourly_encounter_splits',\n",
-      " 'split_file': 'set_splits_1000.json',\n",
-      " 'subset': 0,\n",
-      " 'torch_random_seed': 7532941,\n",
-      " 'unit_hourly_hidden_size1': 64,\n",
-      " 'unit_hourly_hidden_size2': 128}\n",
-      "Parameters set and saved to file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "params = utils.Params(\n",
     "    {\n",
     "        \"output_type\": \"classification\",  # Classification vs Regression\n",
-    "        \"project_dir\": \"..\",  # Top-level path for this project\n",
-    "        \"data_dir\": \"Data\",  # Relative data path\n",
+    "        \"project_dir\": f\"{Path.home()}/code/itan-nn\",  # Top-level path for this project\n",
+    "        \"data_dir\": f\"{Path.home()}/data/itan\",  # Relative data path\n",
     "        \"cohort_file\": \"itan_cohort_v.h5\",  # File path to the cohort dataset (hdf5)\n",
     "        \"sample_dir\": \"Data/itan_hourly_encounter_splits\",  # Directory to the split patient hourly data\n",
     "        \"label\": \"LOS\",  # Column name of target/label in cohort dataframe\n",
@@ -178,10 +122,74 @@
     "        \"normalize_cohort\": True,  # Whether to normalize the cohort features (mean 0, std 1)\n",
     "        \"normalize_hourly\": True,  # Whether to normalize the hourly features (mean 0, std 1), rolling computation over all sample IDs\n",
     "    }\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parameters:\n",
+      "{'all_locations': ['OR', 'WARD', 'ICU', 'TCU', 'PAR'],\n",
+      " 'associated_time_max': 96,\n",
+      " 'association_history': 0,\n",
+      " 'batch_size': 10,\n",
+      " 'cohort_features': ['ADM_LAPS2', 'ADM_COPS2', 'SEX', 'AGE'],\n",
+      " 'cohort_file': 'itan_cohort_v.h5',\n",
+      " 'cross_validation_ratios': {'test': 0.1, 'train': 0.8, 'val': 0.1},\n",
+      " 'data_dir': '/home/jovyan/data/itan',\n",
+      " 'dropout_prob': 0.0,\n",
+      " 'hourly_embedding_fill_value': 0,\n",
+      " 'hourly_features': ['LAPS2',\n",
+      "                     'IMAR_IM_GROUP',\n",
+      "                     'IMAR_INH_GROUP',\n",
+      "                     'IMAR_IVD_GROUP',\n",
+      "                     'IMAR_IVR_GROUP',\n",
+      "                     'IMAR_MSC_GROUP',\n",
+      "                     'IMAR_OR_GROUP',\n",
+      "                     'OT_A_GROUP',\n",
+      "                     'OT_B_GROUP',\n",
+      "                     'OT_D_GROUP',\n",
+      "                     'OT_I_GROUP',\n",
+      "                     'OT_L_GROUP',\n",
+      "                     'OT_N_GROUP'],\n",
+      " 'included_features': ['static', 'hourly', 'strain'],\n",
+      " 'label': 'LOS',\n",
+      " 'learning_rate': 0.01,\n",
+      " 'max_associated_patients': 200,\n",
+      " 'max_occupancy': 150,\n",
+      " 'model_name': 'itan_strain_classification_net',\n",
+      " 'normalize_cohort': True,\n",
+      " 'normalize_hourly': True,\n",
+      " 'num_epochs': 100,\n",
+      " 'num_hourly_output_features': 32,\n",
+      " 'num_layers': 5,\n",
+      " 'numpy_random_seed': 7532941,\n",
+      " 'output_type': 'classification',\n",
+      " 'pad_length': 96,\n",
+      " 'pad_value': 0,\n",
+      " 'patient_hourly_hidden_size': 32,\n",
+      " 'predict_after_hours': 0,\n",
+      " 'predict_remaining_LoS': True,\n",
+      " 'project_dir': '/home/jovyan/code/itan-nn',\n",
+      " 'sample_dir': 'Data/itan_hourly_encounter_splits',\n",
+      " 'split_file': 'set_splits_1000.json',\n",
+      " 'subset': 0,\n",
+      " 'torch_random_seed': 7532941,\n",
+      " 'unit_hourly_hidden_size1': 64,\n",
+      " 'unit_hourly_hidden_size2': 128}\n",
+      "Parameters set and saved to file\n"
+     ]
+    }
+   ],
+   "source": [
     "# Where to save trained weights, log files, parameter file, results, etc.\n",
-    "model_dir = os.path.join(params.project_dir, 'Code/experiments/', params.model_name)\n",
+    "model_dir = os.path.join(params.project_dir, 'experiments/', params.model_name)\n",
     "\n",
     "# Set the logger\n",
     "utils.set_logger(os.path.join(model_dir, 'ITAN_Strain_RNN_Classification.log'), logging.INFO) #  DEBUG  INFO\n",
@@ -194,128 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loaded CV splits from ../Code/experiments/itan_strain_classification_net/set_splits_1000.json\n",
-      "train split:  1000 samples\n",
-      "test split:  1000 samples\n",
-      "val split:  1000 samples\n",
-      "Constructing Strain datasets for each cross-validation split.\n",
-      "\n",
-      "Building dataset for train split\n",
-      "Pre-loading all cohort features\n",
-      "Loaded cohort data:  (997, 5)\n",
-      "                LOS  ADM_LAPS2  ADM_COPS2 SEX   AGE\n",
-      "ENCOUNTER_ID                                       \n",
-      "330000439298   1.82       22.0       50.0   F  52.0\n",
-      "330000461830  27.31        2.0       37.0   M  77.0\n",
-      "330000553996   2.92       67.0        6.0   F  75.0\n",
-      "330000986128   4.37       10.0       22.0   F  86.0\n",
-      "330000171028   0.40       19.0       48.0   F  80.0\n",
-      "Pre-loading all hourly features\n",
-      "Global time indices over 23198 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
-      "DatetimeIndex(['2015-11-05 20:00:00', '2015-11-05 21:00:00',\n",
-      "               '2015-11-05 22:00:00', '2015-11-05 23:00:00',\n",
-      "               '2015-11-06 00:00:00'],\n",
-      "              dtype='datetime64[ns]', freq='H')\n",
-      "Dropping rows not in global index from hourly data to save memory\n",
-      "Reduced hourly data size to 0.09 percent of original\n",
-      "Computing normalization means and variances for all hourly features\n",
-      "Computing mean and variance over all sample IDs\n",
-      "Overall feature means:\n",
-      "LAPS2             63.215285\n",
-      "IMAR_IM_GROUP      0.153343\n",
-      "IMAR_INH_GROUP     0.053203\n",
-      "IMAR_IVD_GROUP     0.128217\n",
-      "IMAR_IVR_GROUP     0.598989\n",
-      "IMAR_MSC_GROUP     0.053889\n",
-      "IMAR_OR_GROUP      0.757568\n",
-      "OT_A_GROUP         0.136099\n",
-      "OT_B_GROUP         0.008830\n",
-      "OT_D_GROUP         0.061897\n",
-      "OT_I_GROUP         0.038622\n",
-      "OT_L_GROUP         0.479249\n",
-      "OT_N_GROUP         0.731856\n",
-      "dtype: float64\n",
-      "Overall feature variances:\n",
-      "LAPS2             627.272581\n",
-      "IMAR_IM_GROUP       0.204830\n",
-      "IMAR_INH_GROUP      0.083033\n",
-      "IMAR_IVD_GROUP      0.250851\n",
-      "IMAR_IVR_GROUP      2.223064\n",
-      "IMAR_MSC_GROUP      0.105592\n",
-      "IMAR_OR_GROUP       3.257236\n",
-      "OT_A_GROUP          0.336434\n",
-      "OT_B_GROUP          0.024504\n",
-      "OT_D_GROUP          0.067901\n",
-      "OT_I_GROUP          0.063572\n",
-      "OT_L_GROUP          2.733837\n",
-      "OT_N_GROUP         13.307644\n",
-      "dtype: float64\n",
-      "Normalizing by overall mean/var for all sample IDs\n",
-      "Hourly feature normalization complete!\n",
-      "Pre-building all patient locations in global time index\n",
-      "All possible locations:  ['WARD' 'OR' 'ICU' 'PAR' 'TCU']\n",
-      "Pre-building all patient associations\n",
-      "Finished building patient associations:  shape (997, 997)\n",
-      "Average of 49.641925777332+/=22.86 associations per sample\n",
-      "Required length 0 hours, did not subset the dataset by hourly length\n",
-      "Pre-computing binary class balances from LoS with threshold of 1.0\n",
-      "All classification targets:  (997, 96)\n",
-      "Class balances:  [ 0.57060766  0.42939234]\n",
-      "train split:  1000 samples:\n",
-      "[330000225236, 330000774040, 330000811143]\n",
-      "X: None\n",
-      "Y: (997, 1)\n",
-      "LoS values:  (997, 1):  mean 3.60 +/- 4.07\n",
-      "\n",
-      "Building dataset for val split\n",
-      "Pre-loading all cohort features\n",
-      "Loaded cohort data:  (999, 5)\n",
-      "               LOS  ADM_LAPS2  ADM_COPS2 SEX    AGE\n",
-      "ENCOUNTER_ID                                       \n",
-      "330000689152  2.97       88.0       34.0   M   80.0\n",
-      "330000508933  1.94      117.0       42.0   F   74.0\n",
-      "330000693254  0.31       30.0        7.0   M   64.0\n",
-      "330000097287  3.83       59.0       48.0   F   87.0\n",
-      "330000961544  5.87      141.0       55.0   F  100.0\n",
-      "Pre-loading all hourly features\n",
-      "Global time indices over 23303 hours:  type <class 'pandas.core.indexes.datetimes.DatetimeIndex'>\n",
-      "DatetimeIndex(['2015-11-03 02:00:00', '2015-11-03 03:00:00',\n",
-      "               '2015-11-03 04:00:00', '2015-11-03 05:00:00',\n",
-      "               '2015-11-03 06:00:00'],\n",
-      "              dtype='datetime64[ns]', freq='H')\n",
-      "Dropping rows not in global index from hourly data to save memory\n",
-      "Reduced hourly data size to 0.11 percent of original\n",
-      "Normalizing by overall mean/var for all sample IDs\n",
-      "Hourly feature normalization complete!\n",
-      "Pre-building all patient locations in global time index\n",
-      "All possible locations:  ['WARD' 'OR' 'ICU' 'TCU' 'PAR']\n",
-      "Pre-building all patient associations\n",
-      "Finished building patient associations:  shape (999, 999)\n",
-      "Average of 42.813813813813816+/=23.24 associations per sample\n",
-      "Required length 0 hours, did not subset the dataset by hourly length\n",
-      "Pre-computing binary class balances from LoS with threshold of 1.0\n",
-      "All classification targets:  (999, 96)\n",
-      "Class balances:  [ 0.45000209  0.54999791]\n",
-      "val split:  1000 samples:\n",
-      "[330000812759, 330000639774, 330000773481]\n",
-      "X: None\n",
-      "Y: (999, 1)\n",
-      "LoS values:  (999, 1):  mean 4.90 +/- 9.84\n",
-      "\n",
-      "Datasets defined!\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jovyan/code/itan-nn/experiments/itan_strain_classification_net/set_splits_1000.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-ff84107498b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load CV Splits from file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msplit_filepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproject_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"experiments/\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcv_split_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dict_from_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplit_filepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loaded CV splits from {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplit_filepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msplit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcv_split_samples\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/code/itan-nn/utils.py\u001b[0m in \u001b[0;36mload_dict_from_json\u001b[0;34m(json_path)\u001b[0m\n\u001b[1;32m    282\u001b[0m         \u001b[0mjson_path\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0mpath\u001b[0m \u001b[0mto\u001b[0m \u001b[0mjson\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m     \"\"\"\n\u001b[0;32m--> 284\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    285\u001b[0m         \u001b[0mjstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jovyan/code/itan-nn/experiments/itan_strain_classification_net/set_splits_1000.json'"
      ]
     }
    ],
    "source": [
     "# Load CV Splits from file\n",
-    "split_filepath = os.path.join(params.project_dir, \"Code/\", \"experiments/\", params.model_name, params.split_file)\n",
+    "split_filepath = os.path.join(params.project_dir, \"experiments/\", params.model_name, params.split_file)\n",
     "cv_split_samples = utils.load_dict_from_json(split_filepath)\n",
     "logging.info(\"Loaded CV splits from {}\".format(split_filepath))\n",
     "for split in cv_split_samples:\n",
