changes to dataset building

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tables\n",
+      "  Using cached https://files.pythonhosted.org/packages/87/f7/bb0ec32a3f3dd74143a3108fbf737e6dcfd47f0ffd61b52af7106ab7a38a/tables-3.5.2-cp36-cp36m-manylinux1_x86_64.whl\n",
+      "Requirement already satisfied: numexpr>=2.6.2 in /opt/conda/lib/python3.6/site-packages (from tables) (2.6.9)\n",
+      "Collecting mock>=2.0 (from tables)\n",
+      "  Using cached https://files.pythonhosted.org/packages/05/d2/f94e68be6b17f46d2c353564da56e6fb89ef09faeeff3313a046cb810ca9/mock-3.0.5-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: numpy>=1.9.3 in /opt/conda/lib/python3.6/site-packages (from tables) (1.11.3)\n",
+      "Requirement already satisfied: six>=1.9.0 in /opt/conda/lib/python3.6/site-packages (from tables) (1.12.0)\n",
+      "Installing collected packages: mock, tables\n",
+      "Successfully installed mock-3.0.5 tables-3.5.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from env import rdb, data_dir\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "q = \"\"\"\n",
+    "    select * \n",
+    "    from doretl.ITAN_PATIENT_HOURLY_V\n",
+    "    where rownum<10000\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = \"\"\"\n",
+    "    select * \n",
+    "    from doretl.ITAN_COHORT_V\n",
+    "\"\"\"\n",
+    "result = rdb.execute(q)\n",
+    "cohort = result.fetchall()\n",
+    "data = pd.DataFrame(cohort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9999it [00:00, 23971.82it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = rdb.execute(q)\n",
+    "hourly = [row for i, row in enumerate(tqdm(result))]\n",
+    "data = pd.DataFrame(hourly)\n",
+    "# data.to_csv(data_dir/f'hourly_{i}.tsv', sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9301it [00:00, 23173.25it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = rdb.execute(q)\n",
+    "hourly = []\n",
+    "for i, row in enumerate(tqdm(result)):\n",
+    "    hourly.append(row)\n",
+    "    if i>10000:\n",
+    "        break\n",
+    "#     if (i % 1000000) == 0: # write to file every million rows and reset\n",
+    "#         pd.DataFrame(hourly).to_csv(data_dir/f'hourly_{i}.tsv', sep=\"\\t\")\n",
+    "#         hourly = []\n",
+    "data = pd.DataFrame(hourly, columns=row.keys())\n",
+    "data.to_csv(data_dir/f'hourly_{i}.tsv', sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10002"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +139,7 @@
        "'Connected: c242587@'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -49,38 +177,385 @@
    ],
    "source": [
     "%%sql n_hourly << \n",
-    "select count(*)\n",
-    "from doretl.ITAN_PATIENT_HOURLY_V"
+    "select *\n",
+    "from doretl.ITAN_PATIENT_HOURLY_V\n",
+    "where rownum <=10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>COUNT(*)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>46630018</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
       "text/plain": [
-       "[(46630018,)]"
+       "sql.run.ResultSet"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_hourly"
+    "type(n_hourly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pat_mrn_id</th>\n",
+       "      <th>pat_enc_csn_id</th>\n",
+       "      <th>fac_id</th>\n",
+       "      <th>location</th>\n",
+       "      <th>begin_eff_time</th>\n",
+       "      <th>end_eff_time</th>\n",
+       "      <th>laps2_ts</th>\n",
+       "      <th>laps2</th>\n",
+       "      <th>cops2</th>\n",
+       "      <th>laps2_hour</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ot_l_group</th>\n",
+       "      <th>ot_n_group</th>\n",
+       "      <th>imar_im_group</th>\n",
+       "      <th>imar_inh_group</th>\n",
+       "      <th>imar_ivr_group</th>\n",
+       "      <th>imar_ivd_group</th>\n",
+       "      <th>imar_msc_group</th>\n",
+       "      <th>imar_or_group</th>\n",
+       "      <th>died</th>\n",
+       "      <th>dnr_c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>110000016332</td>\n",
+       "      <td>322179153513</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2017-03-21 14:59:00</td>\n",
+       "      <td>2017-03-24 15:36:00</td>\n",
+       "      <td>2017-03-24 06:00:00</td>\n",
+       "      <td>55</td>\n",
+       "      <td>103</td>\n",
+       "      <td>2017-03-24 06:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>110000053104</td>\n",
+       "      <td>322183958097</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2017-06-13 17:12:00</td>\n",
+       "      <td>2017-06-15 15:52:00</td>\n",
+       "      <td>2017-06-14 00:00:00</td>\n",
+       "      <td>70</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2017-06-14 00:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>110000069069</td>\n",
+       "      <td>322194881710</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2018-01-31 16:29:00</td>\n",
+       "      <td>2018-02-02 11:40:00</td>\n",
+       "      <td>2018-02-01 23:00:00</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2018-02-01 23:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>110000069069</td>\n",
+       "      <td>322194881710</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2018-01-31 16:29:00</td>\n",
+       "      <td>2018-02-02 11:40:00</td>\n",
+       "      <td>2018-02-02 08:00:00</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2018-02-02 08:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110000076392</td>\n",
+       "      <td>322167607202</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2016-08-14 15:21:00</td>\n",
+       "      <td>2016-08-17 15:32:00</td>\n",
+       "      <td>2016-08-15 11:00:00</td>\n",
+       "      <td>93</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2016-08-15 11:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>110000048321</td>\n",
+       "      <td>322186818510</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2017-08-07 20:23:00</td>\n",
+       "      <td>2017-08-09 17:24:00</td>\n",
+       "      <td>2017-08-08 06:00:00</td>\n",
+       "      <td>107</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2017-08-08 06:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>110000056614</td>\n",
+       "      <td>322165961822</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2016-07-09 17:48:00</td>\n",
+       "      <td>2016-07-10 11:32:00</td>\n",
+       "      <td>2016-07-09 20:00:00</td>\n",
+       "      <td>63</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2016-07-09 20:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>110000111923</td>\n",
+       "      <td>322163294313</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2016-05-08 13:55:00</td>\n",
+       "      <td>2016-05-09 18:15:00</td>\n",
+       "      <td>2016-05-09 17:00:00</td>\n",
+       "      <td>73</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2016-05-09 17:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>110000111923</td>\n",
+       "      <td>322176642328</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2017-02-04 16:27:00</td>\n",
+       "      <td>2017-02-06 14:34:00</td>\n",
+       "      <td>2017-02-05 01:00:00</td>\n",
+       "      <td>78</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2017-02-05 01:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>110000111923</td>\n",
+       "      <td>322176642328</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>WARD</td>\n",
+       "      <td>2017-02-04 16:27:00</td>\n",
+       "      <td>2017-02-06 14:34:00</td>\n",
+       "      <td>2017-02-05 09:00:00</td>\n",
+       "      <td>78</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2017-02-05 09:00:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pat_mrn_id  pat_enc_csn_id fac_id location      begin_eff_time  \\\n",
+       "0  110000016332    322179153513    SCH     WARD 2017-03-21 14:59:00   \n",
+       "1  110000053104    322183958097    SCH     WARD 2017-06-13 17:12:00   \n",
+       "2  110000069069    322194881710    SCH     WARD 2018-01-31 16:29:00   \n",
+       "3  110000069069    322194881710    SCH     WARD 2018-01-31 16:29:00   \n",
+       "4  110000076392    322167607202    SCH     WARD 2016-08-14 15:21:00   \n",
+       "5  110000048321    322186818510    SCH     WARD 2017-08-07 20:23:00   \n",
+       "6  110000056614    322165961822    SCH     WARD 2016-07-09 17:48:00   \n",
+       "7  110000111923    322163294313    SCH     WARD 2016-05-08 13:55:00   \n",
+       "8  110000111923    322176642328    SCH     WARD 2017-02-04 16:27:00   \n",
+       "9  110000111923    322176642328    SCH     WARD 2017-02-04 16:27:00   \n",
+       "\n",
+       "         end_eff_time            laps2_ts  laps2  cops2          laps2_hour  \\\n",
+       "0 2017-03-24 15:36:00 2017-03-24 06:00:00     55    103 2017-03-24 06:00:00   \n",
+       "1 2017-06-15 15:52:00 2017-06-14 00:00:00     70     82 2017-06-14 00:00:00   \n",
+       "2 2018-02-02 11:40:00 2018-02-01 23:00:00     13      6 2018-02-01 23:00:00   \n",
+       "3 2018-02-02 11:40:00 2018-02-02 08:00:00     13      6 2018-02-02 08:00:00   \n",
+       "4 2016-08-17 15:32:00 2016-08-15 11:00:00     93     43 2016-08-15 11:00:00   \n",
+       "5 2017-08-09 17:24:00 2017-08-08 06:00:00    107     94 2017-08-08 06:00:00   \n",
+       "6 2016-07-10 11:32:00 2016-07-09 20:00:00     63      9 2016-07-09 20:00:00   \n",
+       "7 2016-05-09 18:15:00 2016-05-09 17:00:00     73    134 2016-05-09 17:00:00   \n",
+       "8 2017-02-06 14:34:00 2017-02-05 01:00:00     78    134 2017-02-05 01:00:00   \n",
+       "9 2017-02-06 14:34:00 2017-02-05 09:00:00     78    134 2017-02-05 09:00:00   \n",
+       "\n",
+       "   ...   ot_l_group ot_n_group imar_im_group imar_inh_group imar_ivr_group  \\\n",
+       "0  ...          NaN       None           NaN            NaN            1.0   \n",
+       "1  ...          NaN       None           NaN            NaN            1.0   \n",
+       "2  ...          NaN       None           NaN            NaN            NaN   \n",
+       "3  ...          NaN       None           NaN            NaN            NaN   \n",
+       "4  ...         10.0       None           NaN            NaN            1.0   \n",
+       "5  ...          NaN       None           NaN            NaN            1.0   \n",
+       "6  ...          NaN       None           1.0            NaN            NaN   \n",
+       "7  ...          NaN       None           1.0            NaN            NaN   \n",
+       "8  ...          NaN       None           NaN            NaN            NaN   \n",
+       "9  ...          NaN       None           NaN            1.0            NaN   \n",
+       "\n",
+       "  imar_ivd_group  imar_msc_group imar_or_group  died  dnr_c  \n",
+       "0           None            None           NaN     N      1  \n",
+       "1           None            None           NaN     N      0  \n",
+       "2           None            None           NaN     N      0  \n",
+       "3           None            None           3.0     N      0  \n",
+       "4           None            None           NaN     N      1  \n",
+       "5           None            None           NaN     N      1  \n",
+       "6           None            None           4.0     N      0  \n",
+       "7           None            None           NaN     N      0  \n",
+       "8           None            None           NaN     N      1  \n",
+       "9           None            None           NaN     N      1  \n",
+       "\n",
+       "[10 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(n_hourly, columns=n_hourly.field_names)"
    ]
   },
   {
